# ionvif

./: .gitignore  Makefile.am  README.md  configure.ac
gsoap-2.8/: Makefile.in  configure  configure.in
gsoap-2.8/autom4te.cache/: output.3  requests  traces.0  traces.3
gsoap-2.8/gsoap/: Makefile.am  Makefile.in
gsoap-2.8/gsoap/samples/: Makefile.in
gsoap-2.8/gsoap/samples/autotest/: Makefile.in
gsoap-2.8/gsoap/samples/calc/: Makefile.in
gsoap-2.8/gsoap/samples/calc++/: Makefile.in
gsoap-2.8/gsoap/samples/chaining/: Makefile.in
gsoap-2.8/gsoap/samples/chaining++/: Makefile.in
gsoap-2.8/gsoap/samples/databinding/: Makefile.in
gsoap-2.8/gsoap/samples/dime/: Makefile.in
gsoap-2.8/gsoap/samples/dom/: Makefile.in
gsoap-2.8/gsoap/samples/factory/: Makefile.in
gsoap-2.8/gsoap/samples/factorytest/: Makefile.in
gsoap-2.8/gsoap/samples/gmt/: Makefile.in
gsoap-2.8/gsoap/samples/googleapi/: Makefile.in
gsoap-2.8/gsoap/samples/hello/: Makefile.in
gsoap-2.8/gsoap/samples/httpcookies/: Makefile.in
gsoap-2.8/gsoap/samples/lu/: Makefile.in
gsoap-2.8/gsoap/samples/magic/: Makefile.in
gsoap-2.8/gsoap/samples/mashup/: Makefile.in
gsoap-2.8/gsoap/samples/mashup++/: Makefile.in
gsoap-2.8/gsoap/samples/mtom/: Makefile.in
gsoap-2.8/gsoap/samples/mtom-stream/: Makefile.in
gsoap-2.8/gsoap/samples/oneway/: Makefile.in
gsoap-2.8/gsoap/samples/oneway++/: Makefile.in
gsoap-2.8/gsoap/samples/polytest/: Makefile.in
gsoap-2.8/gsoap/samples/primes/: Makefile.in
gsoap-2.8/gsoap/samples/rest/: Makefile.in
gsoap-2.8/gsoap/samples/roll/: Makefile.in
gsoap-2.8/gsoap/samples/router/: Makefile.in
gsoap-2.8/gsoap/samples/rss/: Makefile.in
gsoap-2.8/gsoap/samples/ssl/: Makefile.in
gsoap-2.8/gsoap/samples/template/: Makefile.in
gsoap-2.8/gsoap/samples/udp/: Makefile.in
gsoap-2.8/gsoap/samples/varparam/: Makefile.in
gsoap-2.8/gsoap/samples/wsa/: Makefile.in
gsoap-2.8/gsoap/samples/wsrm/: Makefile.in
gsoap-2.8/gsoap/samples/wsse/: Makefile.in
gsoap-2.8/gsoap/samples/xml-rpc-json/: Makefile.in
gsoap-2.8/gsoap/src/: Makefile.in  MakefileManual
gsoap-2.8/gsoap/wsdl/: Makefile.in
src/: Makefile.am  device_manage.c  ionvif.c  ionvif.h  ipcam-ionvif-event-handler.c  ipcam-ionvif-event-handler.h  main.c  media.c  onvif-auth.c  onvif-auth.h  onvif-authentication.c  onvif-authentication.h  onvif-device-mgmt.c  onvif-media.c  onvif-network-mgmt.c  onvif-server.c  onvif-server.h  onvif-user-mgmt.c  onvif.h  onvif_impl.c  onvif_impl.h  soapTester.c  user_mgmt.c
src/config/: Makefile.am  app.yml
src/discovery/: Makefile.am  Makefile.am~  discovery-server.c  discovery-server.h  ionvif-discovery.c  ionvif-discovery.h  ionvif.c  ionvif.h  ipcam-ionvif-discovery-event-handler.c  ipcam-ionvif-discovery-event-handler.h  ipcam-ionvif-discovery.c  ipcam-ionvif-discovery.h  main.c  main.c~
src/discovery/config/: Makefile.am  app.yml
src/wsdl/: out_ref.txt
